# mtga

./: .gitignore  Actions.ts  Card.ts  CardBehavior.ts  Enums.ts  README.md  formatAtomicData.js  jest.config.ts  next.config.mjs  package.json  tsconfig.json
__tests__/: CardHelpers.ts  CardModel.test.ts
rust/: Cargo.toml
rust/src/: CardTypes.json  card.rs  card_db.rs  colors.rs  cost.rs  deck.rs  example_decks.rs  library.rs  main.rs  reducers.rs  selectors.rs  state_manager.rs
src/: Actions.ts  Card.ts  CardBehavior.ts  CardHelpers.ts  CardModel.ts  Enums.ts
src/app/: Card.tsx  Library.tsx  globals.css  layout.tsx  page.tsx  store.ts
src/types/: index.d.ts
