[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path="src/main.rs"

[dependencies]
enum-iterator = "2.1.0"
redux-rs = "0.3.3"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
strum = "0.26.2"
strum_macros = "0.26.4"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
wasm-bindgen-cli = "0.2.92"
wasm-bindgen = "0.2.92"


[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
]